Add db migration and seed data

--- a/src/Group9.QRevealProximity.Web/appsettings.json
+++ b/src/Group9.QRevealProximity.Web/appsettings.json
@@ -3,7 +3,7 @@
     "SelfUrl": "https://localhost:44351"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=QRevealProximity;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Data Source=qrepro-db.database.windows.net;Initial Catalog=qreproximitydb;Persist Security Info=True;User ID=qrepro_admin;Password=nhom9_mobile;"
   },
   "StringEncryption": {
     "DefaultPassPhrase": "sldIbvMRqKiFdLkQ"
