--- a/src/Group9.QRevealProximity.DbMigrator/appsettings.json
+++ b/src/Group9.QRevealProximity.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=QRevealProximity;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Data Source=qrepro-db.database.windows.net;Initial Catalog=qreproximitydb;Persist Security Info=True;User ID=qrepro_admin;Password=nhom9_mobile;"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
