--- a/src/Group9.QRevealProximity.Web/appsettings.json
+++ b/src/Group9.QRevealProximity.Web/appsettings.json
@@ -1,9 +1,15 @@
 {
   "App": {
-    "SelfUrl": "https://localhost:44351"
+    "SelfUrl": "http://192.168.137.1:4200",
+    "RedirectAllowedUrls": ""
   },
   "ConnectionStrings": {
-    "Default": "Data Source=qrepro-db.database.windows.net;Initial Catalog=qreproximitydb;Persist Security Info=True;User ID=qrepro_admin;Password=nhom9_mobile;"
+    "Default": "Server=DESKTOP-KNUIG34;Database=QRevealProximityDB;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "AuthServer": {
+    "Authority": "http://192.168.137.1:4200",
+    "RequireHttpsMetadata": "false",
+    "SwaggerClientId": "QRevealProximity_App"
   },
   "StringEncryption": {
     "DefaultPassPhrase": "sldIbvMRqKiFdLkQ"
