update db and add publish profile

--- a/src/Group9.QRevealProximity.DbMigrator/appsettings.json
+++ b/src/Group9.QRevealProximity.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-KNUIG34;Database=QRevealProximityDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "Default": "Server=tcp:qre-pro-db.database.windows.net,1433;Initial Catalog=qreveal_proximity_db;Persist Security Info=False;User ID=qre_pro_admin;Password=Group9@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
