--- a/src/Group9.QRevealProximity.Web/appsettings.json
+++ b/src/Group9.QRevealProximity.Web/appsettings.json
@@ -4,7 +4,7 @@
     "RedirectAllowedUrls": ""
   },
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-KNUIG34;Database=QRevealProximityDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "Default": "Server=tcp:qre-pro-db.database.windows.net,1433;Initial Catalog=qreveal_proximity_db;Persist Security Info=False;User ID=qre_pro_admin;Password=Group9@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AuthServer": {
     "Authority": "http://192.168.137.1:4200",
@@ -13,5 +13,8 @@
   },
   "StringEncryption": {
     "DefaultPassPhrase": "sldIbvMRqKiFdLkQ"
+  },
+  "MyAppCertificate": {
+    "X590": "qrevealproximity-group9"
   }
 }
